--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
 # The URL the site will be built for
 base_url = "https://ergo.liquidthink.net"
 
-title = "Alan Turing"
+title = "読書感想文"
 # a description; you can use markdown here if you like
-description="\"*to develop the skill of correct thinking is in the first place to learn what you have to disregard. In order to go on, you have to know what to leave out.*\" \n -Kurt Gödel"
-default_language = "en"
+description="読了したメモを残す"
+default_language = "ja"
 
 highlight_theme = "solarized-light"
 generate_rss = true
@@ -23,11 +23,11 @@ build_search_index = false
 [extra]
 # theme options, (Submit an issue if any social network you may want is missing here: https://github.com/InsidiousMind/Ergo/issues)
 profile = "profile.svg" # the name of the profile picture in static/img/
-website = "liquidthink.net"
-github = "insipx"
-twitter = "insipx"
+website = "harinoma.info"
+github = "enyuka"
+twitter = "24guchia"
 # linkedin = ""
-email = "github@andrewplaza.dev"
+email = "24guchia1@gmail.com"
 # instagram = ""
 # keybase = ""
 # reddit = ""
