--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://ergo.liquidthink.net"
+base_url = "https://distracted-einstein-badfeb.netlify.com/"
 
 title = "読書感想文"
 # a description; you can use markdown here if you like
